syntax = "proto3";

import "google/protobuf/empty.proto";

package modelService;

option go_package = "./modelService";

message Model {
  uint32 id = 1;
  string name = 2;
  string expression = 3;
  string lexExpression = 4;
}

message GetModelsRequest {
  uint32 userId = 1;
}

message GetModelsResponse {
  repeated Model models = 1;
}

message NewModelRequest {
  uint32 userId = 1;
  string name = 2;
  string expression = 3;
  string lexExpression = 4;
}

message DeleteModelRequest {
  uint32 modelId = 1;
}

service ModelService {
  rpc GetUserModels(GetModelsRequest) returns (GetModelsResponse);
  rpc AddModel(NewModelRequest) returns (Model);
  rpc DeleteModel(DeleteModelRequest) returns (google.protobuf.Empty);
}